deploy/kubernetes/base/resources.yaml

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: juicefs-csi-controller
  namespace: kube-system
  labels:
    app.kubernetes.io/component: controller
spec:
  serviceName: juicefs-csi-controller
  selector:
    matchLabels:
      app: juicefs-csi-controller
  replicas: 1
  volumeClaimTemplates: []
  template:
    metadata:
      labels:
        app: juicefs-csi-controller
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: controller
                    operator: In
                    values:
                      - "1"
      serviceAccount: juicefs-csi-controller-sa
      priorityClassName: system-cluster-critical
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
      containers:
        - name: juicefs-plugin
          image: juicedata/juicefs-csi-driver:v0.22.1
          args:
            - --endpoint=$(CSI_ENDPOINT)
            - --logtostderr
            - --nodeid=$(NODE_NAME)
            - --leader-election
            - --v=6
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
            - mountPath: /jfs
              mountPropagation: Bidirectional
              name: jfs-dir
            - mountPath: /root/.juicefs
              mountPropagation: Bidirectional
              name: jfs-root-dir
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          ports:
            - name: healthz
              containerPort: 9909
              protocol: TCP
          securityContext:
            capabilities:
              add:
              - SYS_ADMIN
            privileged: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
        - name: csi-provisioner
          image: k8s.dockerproxy.com/sig-storage/csi-provisioner:v2.2.2
          args:
            - --csi-address=$(ADDRESS)
            - --timeout=60s
            - --leader-election
            - --v=5
            # # NOTE: juicefs is not bound to available zones, kind of topology agnostic
            # - --feature-gates=Topology=true
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-resizer
          image: k8s.dockerproxy.com/sig-storage/csi-resizer:v1.8.0
          args:
            - --csi-address=$(ADDRESS)
            - --leader-election
            - --v=2
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: liveness-probe
          image: k8s.dockerproxy.com/sig-storage/livenessprobe:v2.6.0
          args:
            - --csi-address=$(ADDRESS)
            - --health-port=$(HEALTH_PORT)
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
      volumes:
        - name: socket-dir
          emptyDir: {}
        - hostPath:
            path: /var/lib/juicefs/volume
            type: DirectoryOrCreate
          name: jfs-dir
        - hostPath:
            path: /var/lib/juicefs/config
            type: DirectoryOrCreate
          name: jfs-root-dir
        - name: webhook-certs
          secret:
            secretName: juicefs-webhook-certs
---
# Node Service
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: juicefs-csi-node
  namespace: kube-system
  labels:
    app.kubernetes.io/component: node
spec:
  selector:
    matchLabels:
      app: juicefs-csi-node
  template:
    metadata:
      labels:
        app: juicefs-csi-node
    spec:
      serviceAccount: juicefs-csi-node-sa
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: system-node-critical
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
      containers:
        - name: juicefs-plugin
          securityContext:
            privileged: true
          image: juicedata/juicefs-csi-driver:v0.22.1
          args:
            - --endpoint=$(CSI_ENDPOINT)
            - --logtostderr
            - --nodeid=$(NODE_NAME)
            - --v=6
            - --enable-manager=true
          volumeMounts:
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: plugin-dir
              mountPath: /csi
            - name: device-dir
              mountPath: /dev
            - mountPath: /jfs
              mountPropagation: Bidirectional
              name: jfs-dir
            - mountPath: /root/.juicefs
              mountPropagation: Bidirectional
              name: jfs-root-dir
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - rm /csi/csi.sock
          ports:
            - name: healthz
              containerPort: 9909
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
        - name: node-driver-registrar
          image: k8s.dockerproxy.com/sig-storage/csi-node-driver-registrar:v2.5.0
          args:
            - --csi-address=$(ADDRESS)
            - --kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)
            - --v=5
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: registration-dir
              mountPath: /registration
        - name: liveness-probe
          image: k8s.dockerproxy.com/sig-storage/livenessprobe:v2.6.0
          args:
            - --csi-address=$(ADDRESS)
            - --health-port=$(HEALTH_PORT)
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
      volumes:
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/csi-plugins/csi.juicefs.com/
            type: DirectoryOrCreate
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: device-dir
          hostPath:
            path: /dev
            type: Directory
        - hostPath:
            path: /var/lib/juicefs/volume
            type: DirectoryOrCreate
          name: jfs-dir
        - hostPath:
            path: /var/lib/juicefs/config
            type: DirectoryOrCreate
          name: jfs-root-dir
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: juicefs-admission-webhook
webhooks:
  - name: sidecar.inject.juicefs.com
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
    clientConfig:
      service:
        namespace: kube-system
        name: juicefs-admission-webhook
        path: "/juicefs/inject-v1-pod"
      caBundle: CA_BUNDLE
    timeoutSeconds: 20
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    namespaceSelector:
      matchLabels:
        juicefs.com/enable-injection: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: juicefs-admission-webhook
  namespace: kube-system
spec:
  ports:
    - name: https-rest
      port: 443
      targetPort: 9444
  selector:
    app: juicefs-csi-controller
---
apiVersion: v1
kind: Service
metadata:
  name: sync-controller
  namespace: kube-system
spec:
  ports:
    - name: sync
      port: 80
      targetPort: 9446
  selector:
    app: juicefs-csi-controller
---
apiVersion: v1
kind: Service
metadata:
  name: sync-admission-webhook
  namespace: kube-system
spec:
  ports:
    - name: https-rest
      port: 443
      targetPort: 9444
  selector:
    app: juicefs-csi-controller
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sync-admission-webhook
webhooks:
  - name: sync.inject.juicefs.com
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
    clientConfig:
      service:
        namespace: kube-system
        name: sync-admission-webhook
        path: "/sync/inject-v1-pod"
      caBundle: CA_BUNDLE
    timeoutSeconds: 20
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    namespaceSelector:
      matchLabels:
        data-set-sync/enable-injection: "true"
